--- a/examples/example2.html
+++ b/examples/example2.html
@@ -234,7 +234,7 @@
             <h2>配置信息</h2>
             <div class="input-group">
                 <label for="apiKey">API Key</label>
-                <input type="text" id="apiKey" value="sk-4395dcfa15d8424d922b2f2271b41332" placeholder="请输入 API Key...">
+                <input type="text" id="apiKey" value="your-api-key" placeholder="请输入 API Key...">
             </div>
             <div class="input-group">
                 <label for="baseUrl">Base URL</label>
